@@ -1,0 +1,7 @@
+#include <stdio.h>
+
+void
+bar (void)
+{
+  printf ("OK\n");
+}
